fix align

--- a/styles.css
+++ b/styles.css
@@ -47,6 +47,7 @@ a {
     display: flex;
     flex-direction: row;
     justify-content: center;
+    align-items: center;
     gap: 16px;
 
     @media (max-height: 650px) {
